# wave-autoscale

./: .dockerignore  .env  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MAINTAINERS.md  Makefile.toml  README.md  about.toml  deny.toml  third-party-licenses.html
core/api-server/: Cargo.toml  README.md  moon.yml
core/api-server/src/: app.rs  app_state.rs  args.rs  lib.rs  main.rs  tcp_server.rs
core/api-server/src/controller/: autoscaling_history_controller.rs  definition_controller.rs  inflow_controller.rs  metric_controller.rs  metrics_data_controller.rs  metrics_receiver_controller.rs  mod.rs  plan_controller.rs  plan_logs_controller.rs  scaling_component_controller.rs
core/api-server/src/utils/: test_utils.rs
core/api-server/tests/: app.rs  integration_test.rs
core/api-server/tests/data-layer/: test.db
core/data-layer/: Cargo.toml  README.md  moon.yml
core/data-layer/migrations/postgres/: 20230425085738_metric_table.sql  20230425092354_scaling_component_table.sql  20230425092443_plan_table.sql  20230519055400_autoscaling_history.sql  20230708144029_source_metrics.sql  20240205084036_variables_in_scaling_plan.sql  20240215053620_yaml_column.sql
core/data-layer/migrations/sqlite/: 20230424075225_metric_table.sql  20230425085738_metric_table.sql  20230425092354_scaling_component_table.sql  20230425092443_plan_table.sql  20230519055400_autoscaling_history.sql  20230519055400_plan_log.sql  20230708144029_source_metrics.sql  20240205084027_variables_in_scaling_plan.sql
core/data-layer/src/: config_mapper.rs  data_layer.rs  lib.rs  values_map.rs  variable_mapper.rs
core/data-layer/src/data_layer/: autoscaling_history.rs  metric.rs  metrics_data.rs  mod.rs  plan_logs.rs  scaling_component.rs  scaling_plan.rs  source_metrics.rs
core/data-layer/src/reader/: config_reader.rs  mod.rs  wave_config_reader.rs  wave_definition_reader.rs  yaml_reader.rs
core/data-layer/src/types/: autoscaling_history_definition.rs  kind.rs  metric.rs  metric_definition.rs  metrics_data_item.rs  mod.rs  object_kind.rs  plan_item_definition.rs  plan_log_definition.rs  scaling_component_definition.rs  scaling_plan.rs  scaling_plan_data.rs  scaling_plan_definition.rs  scaling_trigger.rs  scaling_trigger_data.rs  slo.rs  slo_definition.rs  source_metrics.rs
core/data-layer/tests/: data_layer.rs  metrics_data_performance.rs  reader.rs  source_metrics_performance.rs
core/data-layer/tests/variables-examples/: example.yaml  variables.env  variables.json  variables.yaml  variables_file_description.yaml
core/data-layer/tests/yaml/: example.yaml
core/utils/: Cargo.toml  moon.yml
core/utils/src/: config_path.rs  lib.rs  process.rs  wave_config.rs
core/utils/tests/config/: wave-config.yaml
core/utils/tests/yaml/: wave-config.yaml
core/wave-autoscale/: .env  Cargo.toml  moon.yml
core/wave-autoscale/src/: app.rs  args.rs  lib.rs  main.rs
core/wave-autoscale/src/kubernetes/: finalizer.rs  mod.rs
core/wave-autoscale/src/metric_adapter/: cloudwatch.rs  cloudwatch_data.rs  cloudwatch_statistics.rs  mod.rs  prometheus.rs
core/wave-autoscale/src/metric_collector_manager/: mod.rs  process.rs  wa_generator.rs
core/wave-autoscale/src/metric_store/: mod.rs
core/wave-autoscale/src/metric_updater/: mod.rs
core/wave-autoscale/src/scaling_component/: amazon_dynamodb_table.rs  amazon_emr_ec2.rs  aws_ec2_autoscaling.rs  aws_ecs_service_scaling.rs  aws_lambda_function.rs  aws_wafv2.rs  azure_functions_app.rs  azure_vmss_autoscaling.rs  cloudflare_rule.rs  gcp_mig_autoscaling.rs  google_cloud_functions.rs  google_cloud_functions_instance.rs  google_cloud_run_service.rs  k8s_deployment.rs  k8s_json_patch.rs  k8s_patch.rs  mod.rs  netfunnel_segment.rs  wa_logger.rs
core/wave-autoscale/src/scaling_planner/: js_functions.rs  mod.rs  scaling_planner_manager.rs  webhooks.rs
core/wave-autoscale/src/scaling_trigger/: aws_ec2_autoscaling.rs  mod.rs
core/wave-autoscale/src/util/: aws_region.rs  log.rs  mod.rs  string.rs
core/wave-autoscale/src/web_app_runner/: mod.rs
core/wave-autoscale/tests/: amazon_dynamodb_table.rs  amazon_emr_ec2.rs  app.rs  aws_ecs_service_scaling.rs  aws_lambda_function.rs  azure_functions_app.rs  azure_vmss_scaling.rs  gcp_mig_scaling.rs  google_cloud_functions_instance.rs  google_cloud_run_service.rs  integration_test.rs  metric_adapter.rs  metrics_test.rs  scaling_component.rs  scaling_planner.rs  scaling_trigger.rs  simulation.rs
core/wave-autoscale/tests/config/: wave-config.yaml
core/wave-autoscale/tests/metrics-examples/: telegraf-cloudwatch-metrics.yaml  telegraf-google-cloud-monitoring-metrics.yaml  telegraf-mem-metrics.yaml  vector-host-metrics.yaml  vector-multi-transform-metrics.yaml  vector-prometheus-metrics.yaml  vector-transform-metrics.yaml
core/wave-autoscale/tests/yaml/: component_dynamodb_table.yaml  component_ec2_autoscaling.yaml  component_ecs_service_scaling.yaml  component_k8s_deployment.yaml  component_lambda_function.yaml  metric_cloudwatch.yaml  metric_cloudwatch_data.yaml  metric_cloudwatch_statistics.yaml  metric_prometheus.yaml  plan_amazon_emr_ec2_metric_simulation.yaml  plan_azure_vmss_metric_simulation.yaml  plan_cloudwatch_azure_functions_app.yaml  plan_cloudwatch_cloud_functions.yaml  plan_cloudwatch_cloud_functions_v1.yaml  plan_cloudwatch_cloud_functions_v2.yaml  plan_cloudwatch_cloud_run.yaml  plan_cloudwatch_dynamodb.yaml  plan_cloudwatch_ecs_ec2.yaml  plan_cloudwatch_lambda.yaml  plan_ec2_vector_prometheus_center_sample.yaml  plan_gcp_mig.yaml  plan_k8s_istio_rds_sample.yaml  plan_k8s_istio_sample.yaml  plan_prometheus_ec2.yaml  plan_vector_lambda.yaml  plan_vector_netfunnel.yaml  trigger_ec2_autoscaling.yaml
core/wave-cli/: Cargo.toml  moon.yml  wave-config.yaml
core/wave-cli/src/: args.rs  main.rs
core/wave-cli/tests/yaml/: definition.yaml
core/wave-metrics/: Cargo.toml  collectors.yaml  moon.yml  wave-config.yaml
core/wave-metrics/src/: args.rs  lib.rs  main.rs
core/wave-metrics/src/metric_collector/: mod.rs  (+1 more)
core/wave-metrics/tests/: integration_test.rs
(+367 files in other folders)
