[package]
name = "api-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[profile.release]
# Tell `rustc` to optimize for small code size. https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Internal dependencies
data-layer = { path = "../data-layer" }
utils = { path = "../utils" }
# 3rd party dependencies
actix-web = "4.3.1"
dotenvy = { version = "0.15.7" }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
validator = { version = "0.16.0", features = ["derive"] }
serde_json = { version = "1.0.96" }
uuid = { version = "1.3.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
actix-cors = "0.6.4"
chrono = { version = "0.4.26", default-features = false, features = [
  "clock",
  "serde",
] }
clap = { version = "4.3.0", features = ["derive"] }
tracing = { version = "0.1.40" }

[dev-dependencies]
tracing-test = { version = "0.2.4" }
