[package]
name = "data-layer"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6.3", features = [
  "postgres",
  "mysql",
  "sqlite",
  "runtime-tokio-rustls",
  "uuid",
  "any",
  "chrono",
] }
chrono = { version = "0.4.24", features = ["serde"] }
anyhow = "1.0.70"
serde = { version = "1.0.157", features = ["derive"] }
serde_yaml = "0.9.19"
serde_json = "1.0.94"
serde_valid = "0.15.0"
regex = "1.7.3"
lazy_static = "1.4.0"
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
ts-rs = "6.2.1"
rand = { version = "0.8.5" }
