[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.10.0" }
log = { version = "0.4.18" }
anyhow = "1.0.70"
serde = { version = "1.0.157", features = ["derive"] }
serde_yaml = "0.9.19"
