[package]
name = "wave-autoscale"
version = "0.1.0"
edition = "2021"

[dependencies]
data-layer = { path = "../data-layer" }
anyhow = "1.0.70"
tokio = { version = "1.26.0", features = ["full"] }
async-trait = { version = "0.1.67" }
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = { version = "1.0.94" }
aws-config = "0.55.0"
aws-sdk-autoscaling = "0.25.1"
aws-sdk-cloudwatch = "0.25.1"
quick-js = { version = "0.4.1" }
chrono = "0.4.24"
aws-smithy-types-convert = { version = "0.55.0", features = ["convert-chrono"] }
aws-smithy-types = "0.55.0"
