[package]
name = "wave-autoscale"
version = "0.1.0"
edition = "2021"
authors = ["Wave Autoscale Team at STCLab"]
description = "Wave Autoscale is a powerful and versatile autoscaling solution designed to meet the unique business requirements of organizations across all sizes."

[[bin]]
name = "wave-controller"
path = "src/main.rs"

[profile.release]
# Tell `rustc` to optimize for small code size. https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
lto = true

[dependencies]
# Internal dependencies
data-layer = { path = "../data-layer" }
utils = { path = "../utils" }
# Third-party dependencies
anyhow = "1.0.70"
tokio = { version = "1.26.0", features = ["full"] }
async-trait = { version = "0.1.67" }
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = { version = "1.0.94" }
aws-config = "0.55.0"
aws-credential-types = "=0.55.0"
aws-sdk-autoscaling = "0.25.1"
aws-sdk-lambda = "0.25.1"
aws-sdk-dynamodb = "0.25.1"
aws-sdk-applicationautoscaling = "0.25.1"
aws-sdk-cloudwatch = "0.25.1"
quick-js = { version = "0.4.1" }
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
aws-smithy-types-convert = { version = "0.55.0", features = ["convert-chrono"] }
aws-smithy-types = "0.55.0"
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
kube = { version = "0.82.0", default-features = false, features = [
  "runtime",
  "derive",
  "rustls-tls",
  "client",
] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
tower = "0.4.13"
hyper = "0.14.25"
v = "0.1.0"
rustls = "0.21.0"
rustls-pemfile = "1.0.2"
hyper-rustls = "0.24.0"
clap = { version = "4.3.0", features = ["derive"] }
log = { version = "0.4.18" }
env_logger = { version = "0.10.0" }
duration-str = { version = "0.5.1" }
aws-sdk-ecs = "0.25.1"
rquickjs = { version = "0.3.1", features = ["full-async", "parallel"] }
gcp_auth = "0.9.0"
azure_identity = "0.13.0"
azure_core = "0.13.0"
thiserror = { version = "1.0.44" }
cron = { version = "0.12.0" }

[dev-dependencies]
handlebars = "4.3.7"
