[package]
name = "wave-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
env_logger = { version = "0.10.0" }
log = { version = "0.4.18" }
anyhow = "1.0.70"
regex = { version = "1.8.4" }
notify = { version = "6.0.0" }
data-layer = { path = "../data-layer" }
