[package]
name = "wave-metrics"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wave-metrics"
path = "src/main.rs"

[profile.release]
# Tell `rustc` to optimize for small code size. https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
